--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--CONTAINER CREAZIONE BIGLIETTO-->
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-md-4">
+          <label class="form-label">Nome Cognome</label>
+          <input type="text" class="form-control" id="name" />
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Km da percorrere</label>
+          <input type="number" class="form-control" id="km" />
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Fascia d'età</label>
+          <select class="form-select" id="age">
+            <option>Minorenne</option>
+            <option>Maggiorenne</option>
+            <option>Over 65</option>
+          </select>
+        </div>
+      </div>
+      <div class="text-center mt-3">
+        <button class="btn btn-secondary">Genera</button>
+        <button class="btn btn-secondary">Annulla</button>
+      </div>
+    </div>
+
     <!--Foglio JS-->
     <script src="main.js"></script>
   </body>
