--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
       <div class="row">
         <div class="col-md-4">
           <label class="form-label">Nome Cognome</label>
-          <input type="text" class="form-control" id="name" />
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            value="Linda Tancini"
+          />
         </div>
         <div class="col-md-4">
           <label class="form-label">Km da percorrere</label>
-          <input type="number" class="form-control" id="km" />
+          <input type="number" class="form-control" id="km" value="10" />
         </div>
         <div class="col-md-4">
           <label class="form-label">Fascia d'età</label>
