feat: added id for button

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
       </div>
       <div class="text-center mt-3">
-        <button class="btn btn-secondary">Genera</button>
-        <button class="btn btn-secondary">Annulla</button>
+        <button class="btn btn-secondary" id="generate">Genera</button>
+        <button class="btn btn-secondary" id="delete">Annulla</button>
       </div>
     </div>
 
