--- a/index.html
+++ b/index.html
@@ -16,39 +16,41 @@
   </head>
   <body>
     <!--CONTAINER CREAZIONE BIGLIETTO-->
-    <form action="index.html">
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col-md-4">
-            <label class="form-label">Nome Cognome</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              value="Linda Tancini"
-            />
+    <div id="ticket" class="container">
+      <h3 class="fw-bold">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h3>
+      <form action="index.html">
+        <div class="mt-3">
+          <div class="row">
+            <div class="col-md-4">
+              <label class="form-label">Nome Cognome</label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                value="Linda Tancini"
+              />
+            </div>
+            <div class="col-md-4">
+              <label class="form-label">Km da percorrere</label>
+              <input type="number" class="form-control" id="km" value="10" />
+            </div>
+            <div class="col-md-4">
+              <label class="form-label">Fascia d'età</label>
+              <select class="form-select" id="age">
+                <option>Minorenne</option>
+                <option>Maggiorenne</option>
+                <option>Over 65</option>
+              </select>
+            </div>
           </div>
-          <div class="col-md-4">
-            <label class="form-label">Km da percorrere</label>
-            <input type="number" class="form-control" id="km" value="10" />
-          </div>
-          <div class="col-md-4">
-            <label class="form-label">Fascia d'età</label>
-            <select class="form-select" id="age">
-              <option>Minorenne</option>
-              <option>Maggiorenne</option>
-              <option>Over 65</option>
-            </select>
+          <div class="text-center mt-3">
+            <button class="btn btn-secondary" id="generate">Genera</button>
+            <button class="btn btn-secondary" id="delete">Annulla</button>
           </div>
         </div>
-        <div class="text-center mt-3">
-          <button class="btn btn-secondary" id="generate">Genera</button>
-          <button class="btn btn-secondary" id="delete">Annulla</button>
-        </div>
-      </div>
-    </form>
-    <p id="result"></p>
-
+      </form>
+      <p id="result"></p>
+    </div>
     <!--Foglio JS-->
     <script src="main.js"></script>
   </body>
