--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <body>
     <!--CONTAINER CREAZIONE BIGLIETTO-->
     <div id="ticket" class="container">
-      <h1 class="fw-bold text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+      <h1 class="fw-bold text-center text-white">
+        CALCOLA IL PREZZO DEL TUO BIGLIETTO
+      </h1>
       <form action="index.html">
         <div class="mt-3">
           <div class="row">
