feat: added row and col with bootstrap

--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
           </div>
         </div>
       </form>
+      <!--IL MIO BIGLIETTO-->
+      <div class="row" id="generated-ticket">
+        <div class="col-10 pt-3">
+          <h1 class="fw-bold text-center text-white">IL TUO BIGLIETTO</h1>
+          <div class="ticket-structure">
+            <h5 class="ps-5 pt-3">DETTAGLIO PASSEGGERI</h5>
+            <div class="ticket px-5 d-flex flex-row justify-content-between">
+              <div class="col-2 cs-bg-gray">
+                <h6 class="fw-bold ps-1">NOME PASSEGGERO</h6>
+                <p id="add-name" class="ps-1 fw-bold"></p>
+              </div>
+              <div class="col-2">
+                <h6 class="fw-bold">Offerta</h6>
+                <p id="add-offer"></p>
+              </div>
+              <div class="col-2">
+                <h6 class="fw-bold">Carrozza</h6>
+                <p id="add-carrozza"></p>
+              </div>
+              <div class="col-2">
+                <h6 class="fw-bold">Codice CP</h6>
+                <p id="add-cp"></p>
+              </div>
+              <div class="col-2">
+                <h6 class="fw-bold">Costo biglietto</h6>
+                <p id="add-price"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <p id="result"></p>
     </div>
     <!--Foglio JS-->
