feat: added  visible

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
           </div>
         </div>
       </form>
-      <!--IL MIO BIGLIETTO-->
+      <!--IL MIO BIGLIETTO GENERATO-->
       <div class="row" id="generated-ticket">
         <div class="col-10 pt-3">
           <h1 class="fw-bold text-center text-white">IL TUO BIGLIETTO</h1>
           <div class="ticket-structure">
             <h5 class="ps-5 pt-3">DETTAGLIO PASSEGGERI</h5>
             <div class="ticket px-5 d-flex flex-row justify-content-between">
-              <div class="col-2 cs-bg-gray">
+              <div class="col-2 bg-gray">
                 <h6 class="fw-bold ps-1">NOME PASSEGGERO</h6>
                 <p id="add-name" class="ps-1 fw-bold"></p>
               </div>
