--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <h1 class="fw-bold text-center text-white">
         CALCOLA IL PREZZO DEL TUO BIGLIETTO
       </h1>
-      <form action="index.html">
-        <div class="mt-3">
+      <form action="index.html" id="form-ticket">
+        <div class="mt-3 p-4">
           <div class="row">
             <div class="col-md-4">
-              <label class="form-label">Nome Cognome</label>
+              <label class="form-label fw-bold">Nome Cognome</label>
               <input
                 type="text"
                 class="form-control"
@@ -33,11 +33,11 @@
               />
             </div>
             <div class="col-md-4">
-              <label class="form-label">Km da percorrere</label>
+              <label class="form-label fw-bold">Km da percorrere</label>
               <input type="number" class="form-control" id="km" value="10" />
             </div>
             <div class="col-md-4">
-              <label class="form-label">Fascia d'età</label>
+              <label class="form-label fw-bold">Fascia d'età</label>
               <select class="form-select" id="age">
                 <option>Minorenne</option>
                 <option>Maggiorenne</option>
@@ -52,15 +52,15 @@
         </div>
       </form>
       <!--IL MIO BIGLIETTO GENERATO-->
-      <div class="row" id="generated-ticket">
-        <div class="col-10 pt-3">
+      <div class="row mt-4" id="generated-ticket">
+        <div class="col-10 pt-3 offset-1">
           <h1 class="fw-bold text-center text-white">IL TUO BIGLIETTO</h1>
-          <div class="ticket-structure">
-            <h5 class="ps-5 pt-3">DETTAGLIO PASSEGGERI</h5>
+          <div class="ticket-structure text-center">
+            <h5 class="pt-3 mb-4">DETTAGLIO PASSEGGERI</h5>
             <div class="ticket px-5 d-flex flex-row justify-content-between">
               <div class="col-2 bg-gray">
-                <h6 class="fw-bold ps-1">NOME PASSEGGERO</h6>
-                <p id="add-name" class="ps-1 fw-bold"></p>
+                <h6 class="fw-bold">NOME PASSEGGERO</h6>
+                <p id="add-name" class="fw-bold"></p>
               </div>
               <div class="col-2">
                 <h6 class="fw-bold">Offerta</h6>
